# librdkafka

src/: CMakeLists.txt
src-cpp/: CMakeLists.txt
